@@ -2,10 +2,12 @@ package com.ultreon.devices.data.loot;
 
 import com.ultreon.devices.init.DeviceBlocks;
 import net.minecraft.block.Block;
-import net.minecraft.data.loot.BlockLoot;
+import net.minecraft.data.loot.BlockLootTables;
 import net.minecraft.item.Items;
 
-public class ModBlockLootTables extends BlockLoot {
+import java.util.stream.Collectors;
+
+public class ModBlockLootTables extends BlockLootTables {
     public ModBlockLootTables() {
 
     }
@@ -52,6 +54,6 @@ public class ModBlockLootTables extends BlockLoot {
 
     @Override
     protected Iterable<Block> getKnownBlocks() {
-        return DeviceBlocks.getAllBlocks().filter(pBlock -> pBlock.asItem() != Items.AIR && pBlock != DeviceBlocks.PAPER.get()).toList();
+        return DeviceBlocks.getAllBlocks().filter(pBlock -> pBlock.asItem() != Items.AIR && pBlock != DeviceBlocks.PAPER.get()).collect(Collectors.toList());
     }
 }
